fixed h1/h2 overlap (due to position: absolute), filtering works

--- a/styles/CSS/base.css
+++ b/styles/CSS/base.css
@@ -23,7 +23,7 @@ header {
 }
 
 header h1 {
-  position: absolute;
+  /*position: absolute;*/
   width: 100%;
 }
 
@@ -49,7 +49,6 @@ header h2 {
   border-width: 1px;
   padding-left: 5%;
   border: dotted .5em orange;
-
 }
 
 #me {
@@ -61,16 +60,16 @@ header h2 {
 
 #bento {
   /*height: 20%;*/
-  max-width: 33%;
+  max-width: 105%;
   margin-right: 5%
 }
 #center {
-  max-width: 33%;
-  margin-right: 5%
+  max-width: 30%;
+  margin: 0 5% 0 5%;
 }
 
 #right {
-  max-width: 33%;
+  max-width: 30%;
   margin-right: 5%
 }
 
@@ -88,6 +87,14 @@ header h2 {
 #block {
   display: inline-block;
   padding: 1% 2.5% 0 2.5%;
+}
+
+#articles{
+  margin-top: 25%;
+  border: dotted .5em grey;
+
+footer {
+  padding-top: 0.5%;
 }
 
 /*LINK STYLES
